--- a/server/todo
+++ b/server/todo
@@ -1,6 +1,4 @@
-Item Page With Reviews
-Item Review If Auth
-User Dashboard Review List
-Categories Menu
-Styling
-Deploy
+Styling:
+Items Upload
+Deploy: Clone | Links | .ENV heroku variables
+Finish Date: Friday 13th
